--- a/myfootprint.html
+++ b/myfootprint.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <div class="image-1"></div>
+    <span class="look-back-your-foot-print">
+        look back your foot print
+      </span>
 </head>
 <body>
-    
+    <div class="\-"></div>
+    <span class="Traveler-Name">
+        Traveler Name
+      </span>
+      <div class="input-name-button"></div>
+      <span class="write-your-name">
+        write your name
+      </span>
+      <span class="Click-your-memory">
+        Click your memory
+      </span>
+      <div class="Rectangle-4"></div>
+      <span class="Vienna">
+        Vienna
+      </span>
+      <div class="Rectangle-6"></div>
+      <span class="London">
+        London
+      </span>
 </body>
 </html>
